# mcabber-external-editor

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.in  editor.avv.in  editor.c  foo.go  patch.diff
way/: editor.c  editor.go  make.bash
